added categories to context created products.json

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,13 +14,10 @@
 
             <h1 class="my-4">GeekShop</h1>
             <div class="list-group">
-                <a href="#" class="list-group-item">Новинки</a>
-                <a href="#" class="list-group-item">Одежда</a>
-                <a href="#" class="list-group-item">Обувь</a>
-                <a href="#" class="list-group-item">Аксессуары</a>
-                <a href="#" class="list-group-item">Подарки</a>
+                {%  for category in categories %}
+                    <a href="{{ category.link }}" class="list-group-item">{{ category.name }}</a>
+                {% endfor %}
             </div>
-
         </div>
         <!-- /.col-lg-3 -->
 
@@ -102,7 +99,7 @@
 {% block footer %}
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; GeekShop 2020</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Екатерина Вахрушева {%  now 'Y' %}</p>
         </div>
         <!-- /.container -->
     </footer>
